Обновил пути к ресурсам в HTML и CSS для улучшения адаптивности и совместимости. Добавил поддержку загрузки изображений с использованием классов для плавного отображения. Изменил команду сборки в package.json для корректной работы с новыми путями.

--- a/src/style.css
+++ b/src/style.css
@@ -118,7 +118,16 @@ section .content {
   padding: 42px 20px;
 }
 
-.img img {
+.img img,
+.img picture {
+  display: block;
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.img picture img {
   display: block;
   max-width: 100%;
   width: 100%;
@@ -543,6 +552,35 @@ section .content {
   margin-right: 8px;
 }
 
+.section .image-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.section .image-wrapper img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  transition: opacity 0.5s ease;
+}
+
+.section .preview {
+  filter: blur(20px);
+  transform: scale(1.1);
+}
+
+.section .full {
+  opacity: 0;
+}
+
+.section .full.loaded {
+  opacity: 1;
+  z-index: 3;
+}
+
+
 @media screen and (min-width: 768px) {
   .sales-link {
     display: block;
@@ -708,7 +746,7 @@ section .content {
     height: 10px;
     width: 100%;
     background-color: var(--accent-color);
-    background-image: url(../img/фон.svg);
+    background-image: url(/img/фон.svg);
     transform: rotate(-1.7deg);
     position: absolute;
     top: 14px;
