--- a/backend/views/edit.ejs
+++ b/backend/views/edit.ejs
@@ -11,12 +11,30 @@
         <h2>Edit Promotion</h2>
         <form action="/admin/update/<%= promotion.id %>" method="POST" enctype="multipart/form-data">
             <div class="form-group">
-                <label for="title">Title:</label>
-                <input type="text" id="title" name="title" value="<%= promotion.title %>" required>
+                <label for="title_ru">Title (Russian):</label>
+                <input type="text" id="title_ru" name="title_ru" value="<%= promotion.title_ru %>" required>
             </div>
             <div class="form-group">
-                <label for="description">Description:</label>
-                <textarea id="description" name="description"><%= promotion.description %></textarea>
+                <label for="description_ru">Description (Russian):</label>
+                <textarea id="description_ru" name="description_ru"><%= promotion.description_ru %></textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="title_en">Title (English):</label>
+                <input type="text" id="title_en" name="title_en" value="<%= promotion.title_en %>">
+            </div>
+            <div class="form-group">
+                <label for="description_en">Description (English):</label>
+                <textarea id="description_en" name="description_en"><%= promotion.description_en %></textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="title_ka">Title (Georgian):</label>
+                <input type="text" id="title_ka" name="title_ka" value="<%= promotion.title_ka %>">
+            </div>
+            <div class="form-group">
+                <label for="description_ka">Description (Georgian):</label>
+                <textarea id="description_ka" name="description_ka"><%= promotion.description_ka %></textarea>
             </div>
             <div class="form-group">
                 <label>Current Image:</label>
