--- a/src/style.css
+++ b/src/style.css
@@ -210,6 +210,10 @@ section .content {
   object-position: 0 -170px;
 }
 
+.photo__vecher_box img {
+  object-position: 0 -170px;
+}
+
 .photo__korobka_ladi img {
   object-position: 0 -200px;
 }
@@ -445,7 +449,7 @@ section .content {
 
 .contacts_text {
   /* text-decoration: none; */
-  color: var(--accent-color);
+  color: var(--second-color);
   font-size: 14px;
   display: block;
   margin-bottom: 8px;
@@ -885,7 +889,60 @@ section .content {
     padding-top: 40px;
   }
 
-  .language-switcher {
+  .section__team {
+    /* background-color: var(--second-color); */
+    padding-bottom: 84px;
+}
+
+.section__team .content {
+    /* background-color: var(--accent-color); */
+}
+
+.section__team img {
+    max-width: 100%;
+}
+
+.team-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.team-member {
+    text-align: center;
+}
+
+.team-member img {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.team-member h3 {
+    margin: 10px 0 5px;
+    font-size: 1.2em;
+}
+
+.team-member p {
+    margin: 0;
+    font-size: 1em;
+}
+
+.team-photos {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.team-photos img {
+    width: 100%;
+    border-radius: 5px;
+}
+
+.language-switcher {
     margin: 0 20px;
   }
 }
